kubernetes/frontend-app.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: topicpedia-frontend
          image: keoffor/topicdepia-frontend:v1
          imagePullPolicy: Always
          ports:
            - name: frontend-port
              containerPort: 80
