kubernetes/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-deployment
  ports:
    - name: front-http
      port: 80
      targetPort: frontend-port
      protocol: TCP
